# django-system-registry

./: LICENSE  README.md  pyproject.toml  tox.ini
.github/: copilot-instructions.md
.github/workflows/: ci.yml  release.yml
system_registry/: admin.py  apps.py  cache.py  conf.py  models.py  registry.py  services.py
system_registry/management/commands/: sync_system_settings.py
system_registry/migrations/: 0001_initial.py
tests/: settings.py  test_admin.py  test_commands.py  test_models.py  test_registry.py  test_services.py
